--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <i class="fas fa-money-bill-wave mr-2"></i>إجمالي العمل
                 </div>
                 <div id="statIncome" class="text-3xl md:text-4xl font-bold text-green-600 animate-pulse">0</div>
-                <div class="text-xs text-gray-400 mt-2">دينار</div>
+                <div class="text-xs text-gray-400 mt-2">جنيه</div>
             </div>
             
             <!-- إجمالي المصاريف -->
@@ -84,7 +84,7 @@
                     <i class="fas fa-gas-pump mr-2"></i>إجمالي المصاريف
                 </div>
                 <div id="statExpense" class="text-3xl md:text-4xl font-bold text-orange-600">0</div>
-                <div class="text-xs text-gray-400 mt-2">دينار</div>
+                <div class="text-xs text-gray-400 mt-2">جنيه</div>
             </div>
             
             <!-- صافي الربح -->
@@ -93,7 +93,7 @@
                     <i class="fas fa-chart-line mr-2"></i>صافي الربح
                 </div>
                 <div id="statNet" class="text-3xl md:text-4xl font-bold">0</div>
-                <div class="text-xs text-green-200 mt-2">دينار</div>
+                <div class="text-xs text-green-200 mt-2">جنيه</div>
             </div>
         </div>
 
