--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>محاسب التراكتور الزراعي الاحترافي</title>
     
     <link rel="manifest" href="manifest.json">
+    <link rel="icon" herf="icon512.png" type="image/png">
+    <link rel="apple-touch-icon" herf="icon512.png">
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
