--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>محاسب التراكتور الزراعي الاحترافي</title>
     
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.js">
     <link rel="icon" herf="icon512.png" type="image/png">
     <link rel="apple-touch-icon" herf="icon512.png">
     
