--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="flex items-center space-x-3 space-x-reverse">
                 <i class="fas fa-tractor text-3xl"></i>
                 <div>
-                    <h1 class="text-xl md:text-2xl font-bold">🚜 محاسب التراكتور الزراعي</h1>
+                    <h1 class="text-xl md:text-2xl font-bold"> محاسب التراكتور</h1>
                     <p class="text-green-200 text-xs md:text-sm">نظام محاسبة متكامل لسائق التراكتور</p>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                 <button onclick="switchTab('reports')" class="bg-yellow-600 hover:bg-yellow-700 text-white px-4 py-2 rounded-lg text-sm transition-all duration-300 transform hover:scale-105 flex items-center">
                     <i class="fas fa-chart-bar mr-2"></i>التقارير
                 </button>
-                <button onclick="switchTab('backup')" class="bg-green-900 hover:bg-green-950 text-white px-4 py-2 rounded-lg text-sm transition-all duration-300 transform hover:scale-105 flex items-center">
+                <button onclick="switchTab('backup')" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg text-sm transition-all duration-300 transform hover:scale-105 flex items-center">
                     <i class="fas fa-database mr-2"></i>النسخ الاحتياطي
                 </button>
             </div>
